@@ -1,3 +1,9 @@
+2005-09-23  Jakub Jelinek  <jakub@redhat.com>
+
+	* gfortran.dg/gomp/gomp.exp: New file.
+	* gfortran.dg/gomp/omp_atomic1.f90: New test.
+	* gfortran.dg/gomp/omp_do1.f90: New test.
+
 2005-09-23  Diego Novillo  <dnovillo@redhat.com>
 
 	* gcc.dg/gomp/omp-parallel-if.c: New test.
