@@ -1,3 +1,8 @@
+2005-09-23  Jakub Jelinek  <jakub@redhat.com>
+
+	* testsuite/libgomp.fortran/omp_parse1.f90: Add a test for !$omp do
+	without !$omp end do, followed immediately by subroutine end.
+
 2005-09-23  Diego Novillo  <dnovillo@redhat.com>
 
 	* testsuite/libgomp.dg/omp-parallel-if.c: New test.
